<resources>
    <string name="app_name">DevProfile</string>
    <string name="devslopes_text">Devslopes</string>
    <string name="logo_content_description">Logo</string>
    <string name="banner_content_description">Banner</string>
    <string name="camera_content_description">Camera</string>
    <string name="favorite_content_description">Favorite</string>
    <string name="inbox_content_description">Inbox</string>
    <string name="code_content_description">Code</string>
    <string name="data_content_description">Data</string>
    <string name="video_content_description">Video</string>
    <string name="person_content_description">Person</string>
    <string name="dashboard_button_text">Customize Dashboard</string>
</resources>
